crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_field_value.txt
(call name:)
------------------ DIAGNOSTICS -------------------
error: expected an expression
 --> query.ptk:1:12
  |
1 | (call name:)
  |            ^
  |
help: an expression is a node `(kind)`, anonymous node `"text"`, sequence `{...}`, or alternation `[...]`
